@@ -223,6 +223,7 @@
 
 #define CONTEXT_FULL CONTEXT_I386 | CONTEXT_FULL
 #define CONTEXT_ALL  CONTEXT_I386 | CONTEXT_ALL
+#define CONTEXT_XSTATE          (CONTEXT_I386 | 0x00000040L)
 
 
 #define PAGE_NOACCESS          0x01
